style: Update styling to NavBar CSS classes

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,10 +1,10 @@
-ul {
+.ul {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
 }
 
-li {
+.li {
   font-size: 1.25rem;
 }
 
