--- a/frontend/src/components/Calendar/Calendar.css
+++ b/frontend/src/components/Calendar/Calendar.css
@@ -33,18 +33,35 @@ b {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
   margin-top: -2em;
+  /* min-width: 85%;
+  max-width: 90%; */
 }
 
 .calendar-sidebar {
   width: 300px;
   line-height: 1.5;
-  background: #ffd596;
+  /* background: #ffd596; */
+  background: white;
   border-right: 1px solid lightgray;
   box-shadow: 1px 1px 5px lightgray;
+  height: 100%;
+  margin-top: 3em;
 }
 
 .calendar-sidebar-section {
   padding: 2em;
+}
+
+.calendar-sidebar-title {
+  color: white;
+  background-color: #ffc163;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: 1px 1px 3px grey;
+  text-align: center;
+  margin-left: -30px;
+  margin-right: -27px;
+  margin-top: -30px;
 }
 
 .calendar-main {
