--- a/frontend/src/components/EditEmployee/EditEmployee.css
+++ b/frontend/src/components/EditEmployee/EditEmployee.css
@@ -4,17 +4,19 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
 }
 
 .modal-main {
   position: fixed;
   background: white;
-  width: 80%;
+  width: 50%;
   height: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 15px;
+  min-width: 625px;
 }
 
 .display-block {
