--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -14,3 +14,10 @@
 .btn-space {
   margin-left: 5px;
 }
+
+.logo {
+  padding-left: 39%;
+  padding-bottom: 5px;
+  padding-top: 3px;
+  height: 90px;
+}
